# RNMC

./: .gitignore  CO_oxidation.md  Examples.md  Expanding.md  GMC.md  GMC_exp.md  Gemfile  Installation.md  LGMC.md  LGMC_exp.md  LICENSE  NPMC.md  NPMC_exp.md  README.md  RNMC.cpp  Szudzik_algorithm.md  Testing.md  _config.yml  build.sh  codemeta.json  compile_flags.txt  contributors.md  default.html  flake.nix  gdb_commands  index.md  main.cpp  makefile  makefile_test2  paper.bib  paper.crossref  paper.md  shell.nix  szudzik.md  template.html  test.md  test.sh  ui-text.yml
GMC/: GMC  GMC.cpp  GMC_debug  dispatcher.h  energy_reaction_network.cpp  energy_reaction_network.h  final_state.txt  gillespie_reaction_network.cpp  gillespie_reaction_network.h  linear_solver.cpp  linear_solver.h  makefile  reaction_network.cpp  reaction_network.h  simulation.h  sparse_solver.cpp  sparse_solver.h  sql_types.cpp  sql_types.h  tree_solver.cpp  tree_solver.h
LGMC/: LGMC  LGMC.cpp  LGMC.h  LGMC_debug  LatSolver.h  checkpoint.txt  final_state.txt  lattice.cpp  lattice.h  lattice_reaction_network.cpp  lattice_reaction_network.h  lattice_solver.cpp  lattice_solver.h  lattice_test  main  main.cpp  makefile  memory.cpp  memory.h  spktyp.h  sql_types.cpp  sql_types.h
NPMC/: NPMC  NPMC.cpp  NPMC_types.h  NanoSolver.h  makefile  nano_particle.cpp  nano_particle.h  nano_solver.cpp  nano_solver.h  simulation.h  sql_types.cpp  sql_types.h
RNMC/: RNMC.cpp  dispatcher.h  reaction_network.cpp  reaction_network.h  (+3 more)
test_materials/tests/: CMakeLists.txt  lattice_test  lattice_test.cpp  makefile
(+144 files in other folders)
